--- a/web.config
+++ b/web.config
@@ -1,70 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
-	<!-- <appSettings configSource="setting.config"></appSettings> -->
-	<connectionStrings configSource="connection.config" />
-	<system.web>
-		<compilation debug="true" targetFramework="4.0">
-		</compilation>
-    <httpRuntime requestValidationMode="2.0" maxRequestLength="1048576" />
-		<globalization culture="en-GB" />
-		<customErrors mode="Off"></customErrors>
-    <pages controlRenderingCompatibilityVersion="3.5" enableSessionState="true" enableViewStateMac="false" enableEventValidation="false" viewStateEncryptionMode="Never" clientIDMode="AutoID">
-			<namespaces>
-				<clear />
-				<add namespace="System" />
-				<add namespace="System.Collections" />
-				<add namespace="System.Collections.Specialized" />
-				<add namespace="System.Configuration" />
-				<add namespace="System.Text" />
-				<add namespace="System.Text.RegularExpressions" />
-				<add namespace="System.Web" />
-				<add namespace="System.Web.Caching" />
-				<add namespace="System.Web.SessionState" />
-				<add namespace="System.Web.Security" />
-				<add namespace="System.Web.Profile" />
-				<add namespace="System.Web.UI" />
-				<add namespace="System.Data" />
-				<add namespace="System.Data.SqlClient" />
-				<add namespace="System.Web.UI.WebControls" />
-				<add namespace="System.Web.UI.WebControls.WebParts" />
-				<add namespace="System.Web.UI.HtmlControls" />
-				<add namespace="System.Collections.Generic" />
-				<add namespace="System.Linq" />
-			</namespaces>
-    </pages>
-		<authentication mode="Windows" />
-
+  <system.web>
+    <compilation debug="true" targetFramework="4.0"/>
   </system.web>
-	<system.webServer>
-		 <staticContent>
-		  <mimeMap fileExtension=".avif" mimeType="image/avif" />
-		</staticContent>
-		<defaultDocument>
-			<files>
-				<clear />
-				<add value="index.html" />
-				<add value="Login.aspx" />
-				<add value="AdminLogin.aspx" />
-				<add value="iisstart.htm" />
-				<add value="index.php" />
-			</files>
-		</defaultDocument>
-    <security>
-      <requestFiltering>
-        <requestLimits maxAllowedContentLength="1073741824" />
-      </requestFiltering>
-    </security>
-		<rewrite>
-			<rules>
-				<clear />
-				<rule name="Redirect to https" stopProcessing="true">
-					<match url=".*" />
-					<conditions>
-						<add input="{HTTPS}" pattern="off" ignoreCase="true" />
-					</conditions>
-					<action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
-				</rule>
-			</rules>
-		</rewrite>
-	</system.webServer>
 </configuration>
