--- a/setting.config
+++ b/setting.config
@@ -14,13 +14,15 @@
   <add key="productcategoryactualpath" value="~/images/productcategory/actual/" />
   <add key="productcategorypath" value="~/images/productcategory/" />
   <add key="productimagepath" value="~/images/products/" />
+  <add key="blogimagepath" value="~/images/blog/" />
   <add key="productthumbnailpath" value="~/images/products/thumbnail/" />
   <add key="rooturl" value="https://galaxypgjaipur.com/" />
   <add key="logo" value="images/logo.png" />
+  
   <add key="UserName" value="galaxypgjaipur" />
   <add key="companyname" value="galaxypgjaipur" />
   <add key="email" value="emsatsolution@gmail.com" />
-  <add key="infoemail" value="emsatsolution@gmail.com" />
+  <add key="infoemail" value="galaxypgjaipur@gmail.com@gmail.com" />
   <add key="bccemail" value="emsatsolution@gmail.com" />
   <add key="url" value="www.galaxypgjaipur.com" />
   <add key="sms_userId" value="lmia" />
@@ -31,9 +33,9 @@
   <add key="smtp_username" value="securemailserverhosting@gmail.com" />
   <add key="smtp_pwd" value="zejvrzscuxmkrrvm" />
   <add key="smtp_host2" value="webmail.aspiretechnosys.com" />
-  <add key="smtp_username2" value="website@aspiretechnosys.com" />
+  <add key="smtp_username2" value="website@galaxypgjaipur.com" />
   <add key="smtp_pwd2" value="@sp!reP#ssswwd" />
-  <add key="smtp_DisplayName" value="Website Appointment‏" />
+  <add key="smtp_DisplayName" value="galaxypgjaipur‏" />
 </appSettings>
 
 
